--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,13 +3,13 @@ name: taox11
 on:
   push:
     branches:
-      - master
+      - main
       - v*
     tags:
       - AXCIOMA-v*
   pull_request:
     branches:
-      - master
+      - main
       - v*
   workflow_dispatch:
 
@@ -40,10 +40,10 @@ jobs:
       CC: ${{ matrix.CC }}
       CXX: ${{ matrix.CXX }}
     steps:
-    - if: contains(fromJson('["pull_request", "pull_request_target"]'), github.event_name) && github.repository_owner == 'RemedyIT'
+    - if: contains(fromJson('["pull_request", "pull_request_target"]'), github.event_name) 
       run: |
         echo "X11_BRANCH=${{ github.base_ref }}" >> $GITHUB_ENV
-    - if: contains(fromJson('["pull_request", "pull_request_target"]'), github.event_name) == false && github.repository_owner == 'RemedyIT'
+    - if: contains(fromJson('["pull_request", "pull_request_target"]'), github.event_name) == false
       run: |
         echo "X11_BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
     - uses: actions/checkout@v3
